updated homepage with jquery masonry

--- a/_FRONTEND/_css/styles.css
+++ b/_FRONTEND/_css/styles.css
@@ -198,13 +198,13 @@ p.question{margin:0;font-weight:bold;color:#431f4c;}
 /* ~~~~~ HOME ~~~~~ */
 #liveSales{background:url(../_images/bgs/black-diag.png) repeat;overflow:hidden;padding:30px 0;}
 
-.homeSale, .homeAd{position:relative;overflow:hidden;width:242px;margin-bottom:3px;}
+.homeSale, .homeAd{position:relative;overflow:hidden;width:236px;margin-bottom:4px;margin-right:4px;}
 .size1{height:353px;}
 .size2{height:238px;}
 .size3{height:123px;}
 
 .homeSale h2{color:#fff;font-size:2em;padding:15px 10px;display:block;width:222px;background:url(../_images/bgs/purp-opacity-photo-diag.png) repeat;position:absolute;bottom:0px;z-index:10;}
-.homeAd{background:url(../_images/bgs/orange-diag.png) repeat;padding:15px 10px;width:222px;color:#fff;}
+.homeAd{background:url(../_images/bgs/orange-diag.png) repeat;padding: 10px;width:217px;height:  103px;color:#fff;}
 .homeAd h3 a{text-transform:uppercase;font-size:14px;text-decoration:underline;margin-bottom:5px;color:#fff;font-weight:normal;}
 .homeAd p{margin-bottom:0px;}
 
