--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -26,7 +26,7 @@
 /* Reset ================================================================================= */
 * { margin:0; padding:0; }
 
-body          { background:#fff; font:12px/1.35 Arial, Helvetica, sans-serif; color:#000; text-align:center; }
+body          { background:#fff; font:12px/1.35 Arial, Helvetica, sans-serif; color:#000; }
 
 img           { border:0; vertical-align:top; }
 
@@ -37,7 +37,7 @@ a:hover       { text-decoration:none; }
 /* Headings */
 h1            { font-size:20px; font-weight:normal; line-height:1.15; }
 h2            { font-size:18px; font-weight:normal; line-height:1.25; }
-h3            { font-size:16px; font-weight:bold; line-height:1.25; }
+h3            { font-size:16px; font-weight:bold; }
 h4            { font-size:14px; font-weight:bold; }
 h5            { font-size:12px; font-weight:bold; }
 h6            { font-size:11px; font-weight:bold; }
