--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -45,8 +45,16 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
 <?php echo $this->getChildHtml('after_body_start') ?>
     <?php echo $this->getChildHtml('global_notices') ?>
         <?php echo $this->getChildHtml('header') ?>
+
+
+
+
 <section id="liveSales">
 	<div class="container">
+
+                    <?php echo $this->getChildHtml('content') ?>
+
+		<?php /*
 		<article class="homeSale size2 fl masonry">
 			<img src="<?php echo $this->getSkinUrl('images/photos/home/1.jpg') ?>" alt="Sale Name">
 			<h2>Curanotir Ferm</h2>
@@ -87,12 +95,52 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
 			<img src="<?php echo $this->getSkinUrl('images/photos/home/4.jpg') ?>" alt="Sale Name">
 			<h2>Lorem Ipsum dolor sit amet</h2>
 		</article>
+		*/ ?>
 	</div>
 </section>
 <section id="extraSales">
 	<div class="container">
 		<section id="endingSoon" class="col3 fl">
 			<h2>Sales Ending Soon</h2>
+
+
+<?php 
+$i = 1;
+$categories = Mage::helper('catalog/category')->getStoreCategories();
+foreach ($categories as $_category){
+    if($_category->hasChildren()){
+        $_category->getId(); // category id
+        foreach($_category->getChildren() as $subcategory){
+		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
+            if($c->getIsActive()){ // check if category is active
+				$fivedays = date('y-m-d', strtotime("+5 days"));
+				if (!$c->getSale_start_date() == null) {
+	                $startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
+					$enddate = date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00';
+					//var_dump($c);
+					if ($enddate < $fivedays) {
+						if ($i % 2 == 0){
+						echo '<article class="saleDetails fl noMargin">';
+						} else {
+						echo '<article class="saleDetails fl">';
+						}
+						echo '<a href="'. $c->getURL() .'"><img src="/media/catalog/category/'. $c->getImage() .'"></a>';
+						echo '<h3><a href="'. $c->getURL() .'">' . $c->getName() . '</a></h3>';
+						echo '<p>'. date('M jS \a\t g:ia', strtotime($enddate)).'</p>';
+						echo '</article>';
+						$i++;
+					}
+				}
+            }
+        }
+    }
+}
+?>
+</section>
+<?php /*
+
+
+
 			<article class="saleDetails fl">
 				<a href="sales.php"><img src="<?php echo $this->getSkinUrl('images/photos/home/ending-soon-1.jpg') ?>" alt="Sale Name"></a>
 				<h3><a href="sales.php">Swiss Legend Watches</a></h3>
@@ -114,43 +162,52 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
 				<p>March 3rd at 8:00pm</p>
 			</article>
 		</section>
-		
+*/ ?>		
 		<section id="upcomingSales" class="col1 fr noMargin">
 			<h2>Upcoming</h2>
-			<article class="upcomingDate">
-				<h4>March 16</h4>
-				<ul>
-					<li>Martin &amp; Osa</li>
-					<li>Facconable</li>
-					<li>Ray Ban</li>
-					<li>Prada</li>
-				</ul>
-			</article>
-			<article class="upcomingDate noMargin">
-				<h4>March 17</h4>
-				<ul>
-					<li>Martin &amp; Osa</li>
-					<li>Facconable</li>
-					<li>Ray Ban</li>
-				</ul>
-			</article>
-			<article class="upcomingDate">
-				<h4>March 18</h4>
-				<ul>
-					<li>Burberry</li>
-					<li>Gucci</li>
-					<li>Louis Vuitton</li>
-				</ul>
-			</article>
-			<article class="upcomingDate noMargin">
-				<h4>March 19</h4>
-				<ul>
-					<li>Jack Spade</li>
-					<li>Kate Spade</li>
-					<li>Fendi</li>
-					<li>GStar Raw</li>
-				</ul>
-			</article>
+
+
+
+
+<?php 
+$i = 1;
+$sortedArrayByDates = array();
+foreach ($categories as $_category){
+    if($_category->hasChildren()){
+		$_category->getId(); // category id
+		foreach($_category->getChildren() as $subcategory){
+			$c = Mage::getModel('catalog/category')->load($subcategory->getId());
+			if (!$c->getSale_start_date() == null) {
+				$fivedays = date('y-m-d', strtotime("+5 days"));
+				$enddate = date('y-m-d', strtotime($c->getSale_start_date()));
+				if ($enddate > $fivedays) {
+					$sortedArrayByDates[strtotime($c->getSale_start_date())][] = $c->getName();
+				}
+			}
+		}
+    }
+}
+
+ksort($sortedArrayByDates);
+foreach ($sortedArrayByDates as $date => $array)
+{
+	if ($i % 2 == 0){
+	echo '<article class="upcomingDate noMargin">';
+	} else {
+	echo '<article class="upcomingDate">';
+	}
+	echo '<h4>'.date('M d', $date).'</h4>';
+	echo '<ul>';
+    foreach ($array as $a)
+    {
+        echo '<li>'.$a.'</li>';
+    }
+    echo '</ul>';
+    echo '</article>';
+    $i++;
+}
+?>
+
 		</section>
 		
 	</div>
