--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -29,27 +29,27 @@
 		<section class="col1 fl">
 		<h4>Policies</h4>
 		<ul>
-			<li><a href="#">Shipping Policy</a></li>
-			<li><a href="#">Returns and Exchanges</a></li>
-			<li><a href="#">Terms and Conditions</a></li>
+			<li><a href="/shipping-policy">Shipping Policy</a></li>
+			<li><a href="/returns-and-exchanges">Returns and Exchanges</a></li>
+			<li><a href="/terms-and-conditions">Terms and Conditions</a></li>
 		</ul>
 		</section>
 		
 		<section class="col1 fl">
 		<h4>Information</h4>
 		<ul>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">FAQ</a></li>
-			<li><a href="#">Press</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="/about-us">About Us</a></li>
+			<li><a href="/faq">FAQ</a></li>
+			<li><a href="/press">Press</a></li>
+			<li><a href="/contacts">Contact</a></li>
 		</ul>
 		</section>
 		
 		<section class="col1 fl">
 		<h4>Account</h4>
 		<ul>
-			<li><a href="#">My Account</a></li>
-			<li><a href="#">My Cart</a></li>
+			<li><a href="/customers/account">My Account</a></li>
+			<li><a href="/checkout/cart">My Cart</a></li>
 		</ul>
 		</section>
 		<section class="col1 fl noMargin">
