--- a/app/design/frontend/default/rooja/template/page/1column.phtml
+++ b/app/design/frontend/default/rooja/template/page/1column.phtml
@@ -45,11 +45,9 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
 <?php echo $this->getChildHtml('after_body_start') ?>
 <div class="wrapper">
     <?php echo $this->getChildHtml('global_notices') ?>
-    <div class="page">
         <?php echo $this->getChildHtml('header') ?>
-        <div class="main-container col1-layout">
+        <div class="container col1-layout">
             <div class="main">
-                <?php echo $this->getChildHtml('breadcrumbs') ?>
                 <div class="col-main">
                     <?php echo $this->getChildHtml('global_messages') ?>
                     <?php echo $this->getChildHtml('content') ?>
@@ -58,7 +56,6 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
         </div>
         <?php echo $this->getChildHtml('footer') ?>
         <?php echo $this->getChildHtml('before_body_end') ?>
-    </div>
 </div>
 <?php echo $this->getAbsoluteFooter() ?>
 </body>
