--- a/app/design/frontend/default/rooja/template/page/3columns.phtml
+++ b/app/design/frontend/default/rooja/template/page/3columns.phtml
@@ -45,9 +45,8 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
 <?php echo $this->getChildHtml('after_body_start') ?>
 <div class="wrapper">
     <?php echo $this->getChildHtml('global_notices') ?>
-    <div class="page">
         <?php echo $this->getChildHtml('header') ?>
-        <div class="main-container col3-layout">
+        <div class="container col3-layout">
             <div class="main">
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
                 <div class="col-wrapper">
@@ -62,7 +61,6 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
         </div>
         <?php echo $this->getChildHtml('footer') ?>
         <?php echo $this->getChildHtml('before_body_end') ?>
-    </div>
 </div>
 <?php echo $this->getAbsoluteFooter() ?>
 </body>
