--- a/app/design/frontend/default/rooja/layout/catalog.xml
+++ b/app/design/frontend/default/rooja/layout/catalog.xml
@@ -75,11 +75,7 @@ Category default layout
 
     <catalog_category_default translate="label">
         <label>Catalog Category (Non-Anchor)</label>
-        <reference name="sort">
-            <block type="catalog/navigation" name="catalog.leftnav" after="currency" template="catalog/navigation/left.phtml"/>
-        </reference>		
         <reference name="content">
-<block type="catalog/product_view_description" name="product.mynewblock" as="mynewblock" template="catalog/navigation/left.phtml"/> 
 			<block type="core/text_list" name="sorting" template="catalog/navigation/left.phtml"/>
             <block type="catalog/category_view" name="category.products" template="catalog/category/view.phtml">
                 <block type="catalog/product_list" name="product_list" template="catalog/product/list.phtml">
@@ -190,7 +186,7 @@ Product view
         <label>Catalog Product View (Any)</label>
         <!-- Mage_Catalog -->
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+            <action method="setTemplate"><template>page/product.phtml</template></action>
         </reference>
         <reference name="head">
             <action method="addJs"><script>varien/product.js</script></action>
