--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -53,12 +53,13 @@ body{
 #mainNav{
 	float: left;
 	width: 400px;
-	margin: 0px 0px 0px 140px;
+	height:70px;
+	margin: -10px 0px 0px 140px;
 }
 #mainNav ul li{
 	display: inline-block;
 	margin-right: 25px;
-	height: 40px;
+	height: 50px;
 	padding: 10px 20px 10px 15px;
 	background: url("../images/icons/arrow-nav-dark.png") no-repeat scroll 90% 50%;
 	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", Helvetica, Arial;
@@ -86,6 +87,8 @@ body{
 }
 #mainNav ul li:hover div ul{
 	border-top: solid 1px #431f4c;
+	padding-top:10px;
+	margin-top:10px;
 }
 #mainNav ul li:hover div ul li{
 	display: block;
@@ -99,8 +102,9 @@ body{
 	text-transform: none;
 	font-size: 0.857em;
 	color: #fff;
-	font-family: Ariel;
+	font-family: Arial;
 	font-weight: normal;
+	line-height:1.2em;
 }
 #mainNav ul li:hover ul li:hover{
 	background-color: #431f4c;
@@ -115,10 +119,10 @@ body{
 	top: 43%;
 }
 #accountLinks{
-	float: left;
-	margin: 15px 0px 10px 90px;
-	width: 240px;
+	float: right;
+	margin: 15px 0px 10px 10px;
 }
+ul#myAccount{float:left;}
 ul#myAccount li{
 	float: left;
 	height: 5px;
