--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -70,7 +70,7 @@ body{
 	padding-left: 15px;
 }
 #mainNav ul li div{
-	/*display:none;*/
+	display:none;
 	width: 120px;
 }
 #mainNav ul li:hover div {
