Facebook Connect API info + New DB

--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -47,11 +47,10 @@
 		<input type="button" id="fBConnect" name="fBConnect" class="tr">
 		<input type="submit" id="loginBtn" name="loginBtn" class="tr">
 	</form>
-	<?php /* commenting out till facebook button works
+	<?php /* commenting out till facebook button works */ ?>
 	<button rel=Ófacebook-connectÓ class=Óform-buttonÓ type=ÓsubmitÓ><span>Connect with Facebook</span></button>
 <a rel=Ófacebook-connectÓ>Connect with Facebook</a>
 	<h2 id="signUp" class="tr">Sign Up</h2>
-	*/ ?>
 	<a href="about.html" id="tellMeMore" class="tr">Don&rsquo;t have an account? Join Now.</a>
 	
 </section><!--End Content-->
